--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -4,8 +4,8 @@
 
 ## 統計
 
-- **カテゴリ数**: 40
-- **ツール総数**: 109
+- **カテゴリ数**: 45
+- **ツール総数**: 115
 
 ## 目次
 
@@ -15,8 +15,10 @@
 - [ITSMツール](#itsmツール) (1ツール)
 - [IaCセキュリティツール](#iacセキュリティツール) (3ツール)
 - [IaCツール](#iacツール) (6ツール)
+- [Lintツール](#lintツール) (1ツール)
 - [UI_UXツール](#ui-uxツール) (4ツール)
 - [UMLツール](#umlツール) (3ツール)
+- [アーキテクチャツール](#アーキテクチャツール) (1ツール)
 - [インフラテストツール](#インフラテストツール) (2ツール)
 - [インフラ設計ツール](#インフラ設計ツール) (1ツール)
 - [クエリツール](#クエリツール) (1ツール)
@@ -30,14 +32,16 @@
 - [データベースツール](#データベースツール) (5ツール)
 - [データベース設計ツール](#データベース設計ツール) (1ツール)
 - [データ処理ツール](#データ処理ツール) (1ツール)
-- [ドキュメント管理ツール](#ドキュメント管理ツール) (3ツール)
+- [ドキュメント管理ツール](#ドキュメント管理ツール) (2ツール)
+- [ネットワークツール](#ネットワークツール) (1ツール)
 - [バッチ処理ツール](#バッチ処理ツール) (1ツール)
 - [バージョン管理ツール](#バージョン管理ツール) (1ツール)
 - [フレームワークツール](#フレームワークツール) (1ツール)
 - [プロジェクト管理ツール](#プロジェクト管理ツール) (7ツール)
 - [プロセスモデリングツール](#プロセスモデリングツール) (2ツール)
 - [ポリシー管理ツール](#ポリシー管理ツール) (1ツール)
-- [マイグレーションツール](#マイグレーションツール) (1ツール)
+- [マイグレーションツール](#マイグレーションツール) (3ツール)
+- [モックツール](#モックツール) (1ツール)
 - [レポーティングツール](#レポーティングツール) (1ツール)
 - [作図ツール](#作図ツール) (7ツール)
 - [帳票ツール](#帳票ツール) (3ツール)
@@ -49,6 +53,7 @@
 - [設計ツール](#設計ツール) (1ツール)
 - [開発ツール](#開発ツール) (3ツール)
 - [開発環境ツール](#開発環境ツール) (3ツール)
+- [静的解析ツール](#静的解析ツール) (1ツール)
 
 ## APIツール
 
@@ -113,6 +118,14 @@
 | Bicep | Bicepは、Microsoft Azure公式のDomain Specific Language（DSL）で、ARM Templates（JSON）の高レベル抽象化言語です。簡潔な宣言的構文でAzureリソース（VM、Storage、ネットワーク等）を定義し、ARM Templatesにトランスパイルしてデプロイします。モジュール化、型安全、IntelliSense、リンターにより、Infras... | [Bicep.md](IaCツール/Bicep.md) |
 | Terraform | Terraformは、HashiCorp社が開発したオープンソースのInfrastructure as Code（IaC）ツールです。HCL（HashiCorp Configuration Language）という宣言型の設定言語を使用して、クラウドインフラストラクチャをコードとして定義・管理できます。AWS、Azure、GCP、その他多数のプロバイダーに対応したマルチクラウド対応が特徴です。 | [Terraform.md](IaCツール/Terraform.md) |
 
+## Lintツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Pylint | Pylintは、Python公式の静的コード解析ツールです。コードスタイル（PEP 8）、エラー、バグ、コードスメル、複雑度を検出し、コード品質スコア（0-10点）を提供します。カスタムルール、VS Code統合、CI/CD統合により、Pythonコード品質を向上させます。 | [Pylint.md](Lintツール/Pylint.md) |
+
 ## UI_UXツール
 
 **ツール数**: 4
@@ -133,6 +146,14 @@
 | Enterprise Architect | Enterprise Architectは、Sparx Systems社が開発したエンタープライズ向けUMLモデリングツールです。UML 2.5完全対応、BPMN、ArchiMate、SysMLなど多様なモデリング記法をサポートし、要件管理からシステム設計、実装、テストまでのソフトウェア開発ライフサイクル全体をカバーします。大規模プロジェクトでの利用に適した、業界標準のモデリングプラットフォームで... | [Enterprise_Architect.md](UMLツール/Enterprise_Architect.md) |
 | StarUML | StarUMLは、軽量で高速なUMLモデリングツールです。UML 2.0の主要なダイアグラムタイプをサポートし、シンプルで洗練されたUIにより、開発者が素早くUML図を作成できます。オープンソース版から進化した商用ツールで、クロスプラットフォーム対応、拡張機能、コード生成・リバースエンジニアリング機能を提供します。 | [StarUML.md](UMLツール/StarUML.md) |
 | Visual Paradigm | Visual Paradigmは、香港のVisual Paradigm社が開発した包括的なUMLモデリングツールです。UML、BPMN、ERD、DFD、ArchiMate等の多様な記法をサポートし、ソフトウェア設計からビジネスプロセスモデリング、データベース設計まで幅広く対応します。Enterprise Architectと同等の機能を持ちながら、より直感的なUIとリーズナブルな価格設定が特徴です... | [Visual_Paradigm.md](UMLツール/Visual_Paradigm.md) |
+
+## アーキテクチャツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| C4 Model | C4 Modelは、Simon Brown氏が提唱したソフトウェアアーキテクチャ図作成フレームワークです。4つの抽象度レベル（Context、Container、Component、Code）で段階的にシステムを可視化し、ステークホルダーごとに適切な詳細度でアーキテクチャを説明します。PlantUML、Structurizr、diagrams.net等のツールで図を作成し、ドキュメント化、コミュニ... | [C4_Model.md](アーキテクチャツール/C4_Model.md) |
 
 ## インフラテストツール
 
@@ -261,13 +282,20 @@
 
 ## ドキュメント管理ツール
 
-**ツール数**: 3
+**ツール数**: 2
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Confluence | Confluenceは、Atlassian社が開発したチーム向けドキュメント管理・ナレッジベースツールです。Wikiベースの協業プラットフォームとして、プロジェクトドキュメント、要件定義書、設計書、議事録、ナレッジ記事などを一元管理できます。JIRA、Trello、Slackなど他のツールとシームレスに統合し、チームの情報共有とコラボレーションを促進します。 | [Confluence.md](ドキュメント管理ツール/Confluence.md) |
-| Notion | Notionは、オールインワンワークスペースツールです。ドキュメント作成、Wiki、データベース、タスク管理、プロジェクト管理を一つのプラットフォームで実現します。ブロックベースのエディタにより、テキスト、画像、表、データベース、埋め込みコンテンツを自由に組み合わせ、柔軟なページを作成できます。個人利用からチーム協業まで幅広く対応し、世界中で3,000万人以上のユーザーに利用されています。 | [Notion.md](ドキュメント管理ツール/Notion.md) |
 | Obsidian | Obsidian は、Markdown ベースのナレッジベース・ノート管理アプリケーションです。ローカルファイルを基盤とし、双方向リンクによるネットワーク状のノート構造を構築できます。「Second Brain（第二の脳）」として、個人的な知識管理からチームのドキュメント管理まで幅広く活用できます。 | [Obsidian.md](ドキュメント管理ツール/Obsidian.md) |
+
+## ネットワークツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Wireshark | Wireshark は、世界で最も広く使用されているオープンソースのネットワークプロトコルアナライザーです。ネットワークトラフィックをリアルタイムでキャプチャし、パケットレベルで詳細に解析することができます。GUI ベースの直感的なインターフェースと強力なフィルタリング機能により、ネットワークトラブルシューティング、セキュリティ分析、プロトコル開発、教育に広く利用されています。 | [Wireshark.md](ネットワークツール/Wireshark.md) |
 
 ## バッチ処理ツール
 
@@ -326,11 +354,21 @@
 
 ## マイグレーションツール
 
-**ツール数**: 1
+**ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | AWS Database Migration Service (DMS) | AWS Database Migration Service（DMS）は、Amazon Web Services公式のデータベースマイグレーションサービスです。オンプレミス、AWS、他クラウド間でデータベース（Oracle、SQL Server、MySQL、PostgreSQL、MongoDB等）を最小ダウンタイムで移行し、同種・異種データベース間の移行、継続的データレプリケーション、データウェア... | [AWS_Database_Migration_Service.md](マイグレーションツール/AWS_Database_Migration_Service.md) |
+| Flyway | Flyway は、Redgate が提供するオープンソースのデータベースマイグレーションツールです。SQL ベースまたは Java ベースのマイグレーションスクリプトを使用して、データベーススキーマのバージョン管理、適用、追跡を自動化します。シンプルで直感的な「マイグレーション as コード」アプローチにより、開発からプロダクションまでの一貫したデータベース管理を実現し、CI/CD パイプラインへ... | [Flyway.md](マイグレーションツール/Flyway.md) |
+| Liquibase | Liquibase は、オープンソースのデータベーススキーマ変更管理・マイグレーションツールです。XML、YAML、JSON、SQL など複数の形式でデータベース変更を定義し、データベースに依存しない抽象化レイヤーを提供します。Change Set（変更セット）ベースのアプローチにより、複雑な変更履歴の管理、ロールバック、条件分岐を柔軟に実現し、エンタープライズ環境での大規模なデータベース管理に適... | [Liquibase.md](マイグレーションツール/Liquibase.md) |
+
+## モックツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Mockito | Mockitoは、Java/Kotlin向けオープンソースモックフレームワークです。ユニットテストでモックオブジェクト作成、スタブ化、検証を行い、依存関係を持つクラスのテストを容易にします。アノテーション、BDD（Behavior-Driven Development）スタイル、スパイ、引数キャプチャにより、JUnit、TestNG等のテストフレームワークと統合し、テスト駆動開発（TDD）を支援し... | [Mockito.md](モックツール/Mockito.md) |
 
 ## レポーティングツール
 
@@ -438,6 +476,14 @@
 | IntelliJ IDEA | IntelliJ IDEAは、JetBrainsが開発したJava向けの統合開発環境（IDE）です。強力なコード解析、リファクタリング機能、優れた開発者体験により、Java開発のデファクトスタンダードとなっています。 **主な特徴:** - 高度なコード補完とインテリジェントな提案 - 強力なリファクタリング機能 - 組み込みデバッガとプロファイラ - バージョン管理システム（Git、SVN等）の... | [IntelliJ_IDEA.md](開発環境ツール/IntelliJ_IDEA.md) |
 | Visual Studio Code (VS Code) | Visual Studio Code（VS Code）は、Microsoftが開発した無料のオープンソースコードエディタです。軽量ながら強力な機能を持ち、拡張機能により様々なプログラミング言語や開発環境に対応できます。 **主な特徴:** - クロスプラットフォーム（Windows、macOS、Linux） - 豊富な拡張機能（50,000以上） - 統合ターミナル - Git統合 - Intel... | [VS_Code.md](開発環境ツール/VS_Code.md) |
 | Vagrant | Vagrantは、HashiCorp社が開発した仮想開発環境の構築・管理ツールです。VagrantfileというテキストファイルでVM設定を定義し、`vagrant up`コマンドで即座に開発環境を立ち上げられます。VirtualBox、VMware、Docker等の仮想化プラットフォームを統一的なインターフェースで操作でき、チーム全体で一貫した開発環境を共有できます。 | [Vagrant.md](開発環境ツール/Vagrant.md) |
+
+## 静的解析ツール
+
+**ツール数**: 1
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| SonarQube | SonarQubeは、オープンソースの継続的コード品質管理プラットフォームです。静的コード解析でバグ、脆弱性、コードスメル、重複コード、コードカバレッジを検出し、30+言語（Java、JavaScript、Python、C#、PHP等）をサポートします。SonarCloud（クラウド版）、CI/CD統合、Quality Gate、セキュリティホットスポット検出により、DevSecOpsパイプライン... | [SonarQube.md](静的解析ツール/SonarQube.md) |
 
 ---
 
