--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -5,11 +5,11 @@
 ## 統計
 
 - **カテゴリ数**: 45
-- **ツール総数**: 115
+- **ツール総数**: 124
 
 ## 目次
 
-- [APIツール](#apiツール) (5ツール)
+- [API・統合ツール](#api統合ツール) (14ツール)
 - [CI_CDツール](#ci-cdツール) (5ツール)
 - [CLIツール](#cliツール) (1ツール)
 - [ITSMツール](#itsmツール) (1ツール)
@@ -41,7 +41,6 @@
 - [プロセスモデリングツール](#プロセスモデリングツール) (2ツール)
 - [ポリシー管理ツール](#ポリシー管理ツール) (1ツール)
 - [マイグレーションツール](#マイグレーションツール) (3ツール)
-- [モックツール](#モックツール) (1ツール)
 - [レポーティングツール](#レポーティングツール) (1ツール)
 - [作図ツール](#作図ツール) (7ツール)
 - [帳票ツール](#帳票ツール) (3ツール)
@@ -55,17 +54,37 @@
 - [開発環境ツール](#開発環境ツール) (3ツール)
 - [静的解析ツール](#静的解析ツール) (1ツール)
 
-## APIツール
+## API・統合ツール
 
-**ツール数**: 5
+**ツール数**: 14
+
+### APIツール
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Apidog | Apidog は、API 設計、ドキュメント生成、テスト、モックを統合したオールインワンの API 開発プラットフォームです。Postman、Swagger、Mock.io の機能を一つのツールに統合し、API ライフサイクル全体をカバーします。 | [Apidog.md](APIツール/Apidog.md) |
-| Postman | Postmanは、API開発・テストのための包括的プラットフォームです。REST API、GraphQL、SOAP、WebSocketなどのAPIリクエストを簡単に作成・送信し、レスポンスを検証できます。開発者がAPIを設計、テスト、ドキュメント化、モニタリングするための統合環境を提供し、世界中で2,500万人以上の開発者に利用されています。 | [Postman.md](APIツール/Postman.md) |
-| ReDoc | ReDocは、OpenAPI（Swagger）仕様書から美しく読みやすいAPIドキュメントを自動生成するオープンソースツールです。Redocly社が開発し、レスポンシブデザイン、3カラムレイアウト、検索機能、サンプルコード生成により、開発者フレンドリーなAPIリファレンスを提供します。HTMLファイル1つで公開でき、SwaggerUIの代替として広く利用されています。 | [ReDoc.md](APIツール/ReDoc.md) |
-| Stoplight Studio | Stoplight Studioは、API設計とドキュメント作成に特化したビジュアルエディタです。OpenAPI（Swagger）仕様書をGUIまたはコードエディタで編集でき、リアルタイムプレビュー、モックサーバー、バリデーション機能を提供します。デスクトップアプリとWeb版の両方があり、個人開発者からエンタープライズチームまで、API設計を効率化します。 | [Stoplight_Studio.md](APIツール/Stoplight_Studio.md) |
-| Swagger / OpenAPI | Swagger（現在はOpenAPI）は、RESTful APIを設計・文書化・テストするためのオープンソースツールセットです。OpenAPI Specification (OAS)という標準仕様に基づき、APIをYAML/JSON形式で定義し、インタラクティブなAPIドキュメント、コード生成、モックサーバーなどを自動生成できます。API開発の標準として広く採用されています。 | [Swagger_OpenAPI.md](APIツール/Swagger_OpenAPI.md) |
+| Apidog | Apidog は、API 設計、ドキュメント生成、テスト、モックを統合したオールインワンの API 開発プラットフォームです。Postman、Swagger、Mock.io の機能を一つのツールに統合し、API ライフサイクル全体をカバーします。 | [Apidog.md](API・統合/Apidog.md) |
+| Postman | Postmanは、API開発・テストのための包括的プラットフォームです。REST API、GraphQL、SOAP、WebSocketなどのAPIリクエストを簡単に作成・送信し、レスポンスを検証できます。開発者がAPIを設計、テスト、ドキュメント化、モニタリングするための統合環境を提供し、世界中で2,500万人以上の開発者に利用されています。 | [Postman.md](API・統合/Postman.md) |
+| ReDoc | ReDocは、OpenAPI（Swagger）仕様書から美しく読みやすいAPIドキュメントを自動生成するオープンソースツールです。Redocly社が開発し、レスポンシブデザイン、3カラムレイアウト、検索機能、サンプルコード生成により、開発者フレンドリーなAPIリファレンスを提供します。HTMLファイル1つで公開でき、SwaggerUIの代替として広く利用されています。 | [ReDoc.md](API・統合/ReDoc.md) |
+| Stoplight Studio | Stoplight Studioは、API設計とドキュメント作成に特化したビジュアルエディタです。OpenAPI（Swagger）仕様書をGUIまたはコードエディタで編集でき、リアルタイムプレビュー、モックサーバー、バリデーション機能を提供します。デスクトップアプリとWeb版の両方があり、個人開発者からエンタープライズチームまで、API設計を効率化します。 | [Stoplight_Studio.md](API・統合/Stoplight_Studio.md) |
+| Swagger / OpenAPI | Swagger（現在はOpenAPI）は、RESTful APIを設計・文書化・テストするためのオープンソースツールセットです。OpenAPI Specification (OAS)という標準仕様に基づき、APIをYAML/JSON形式で定義し、インタラクティブなAPIドキュメント、コード生成、モックサーバーなどを自動生成できます。API開発の標準として広く採用されています。 | [Swagger_OpenAPI.md](API・統合/Swagger_OpenAPI.md) |
+
+### モックツール
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Mockito | Mockitoは、Java/Kotlin向けオープンソースモックフレームワークです。ユニットテストでモックオブジェクト作成、スタブ化、検証を行い、依存関係を持つクラスのテストを容易にします。アノテーション、BDD（Behavior-Driven Development）スタイル、スパイ、引数キャプチャにより、JUnit、TestNG等のテストフレームワークと統合し、テスト駆動開発（TDD）を支援します。 | [Mockito.md](API・統合/Mockito.md) |
+| WireMock | WireMockは、HTTP APIのモック・スタブ化を行うオープンソースツールです。REST APIやSOAPサービスの動作をシミュレートし、実際のサービスなしでAPIクライアントの開発・テストを可能にします。Javaライブラリとして、またスタンドアロンサーバーとして動作し、言語非依存でHTTPレベルでのモックを提供します。リクエストマッチング、レスポンステンプレート、遅延シミュレーション、プロキシ/録画機能など、APIテストに必要な包括的な機能を備えています。 | [WireMock.md](API・統合/WireMock.md) |
+| MockServer | MockServerは、HTTP/HTTPSベースのAPIをモック・スタブ化するオープンソースツールです。REST API、SOAP、その他のHTTPサービスをシミュレートし、実際のサービスなしでクライアント開発やテストを可能にします。リクエストマッチング、レスポンステンプレート、プロキシ、検証機能に加え、OpenAPI仕様からのモック自動生成、強力なUIダッシュボード、WebSocketサポートなど、WireMockの機能を拡張した特徴を持ちます。 | [MockServer.md](API・統合/MockServer.md) |
+| MSW (Mock Service Worker) | MSW (Mock Service Worker)は、Service Worker APIを活用したJavaScript/TypeScript向けのAPIモックライブラリです。ブラウザとNode.js両方で動作し、実際のHTTPリクエストをネットワークレベルでインターセプトしてモックレスポンスを返します。従来のXHR/fetchのモンキーパッチ方式と異なり、アプリケーションコードに手を加えることなくAPIモックを実現します。 | [MSW.md](API・統合/MSW.md) |
+| Mountebank | Mountebankは、複数のネットワークプロトコルに対応したオープンソースのサービス仮想化ツールです。HTTP/HTTPS、TCP、SMTP等、多様なプロトコルをモック・スタブ化でき、マイクロサービスやレガシーシステムの統合テストで威力を発揮します。インポスター（Imposter）と呼ばれる仮想サービスを定義し、スタブ（Stub）でレスポンスを返したり、プロキシ（Proxy）で実サービスと連携したりできます。 | [Mountebank.md](API・統合/Mountebank.md) |
+| Prism | Prismは、OpenAPI仕様（Swagger）をベースにしたHTTP APIモックサーバーです。OpenAPI/Swagger定義ファイルから自動的にモックサーバーを生成し、リクエストのバリデーション、レスポンスの自動生成、エラーケースのシミュレーションを提供します。スキーマ駆動開発（Schema-Driven Development）を強力にサポートし、API仕様書とモックの乖離を防ぎます。 | [Prism.md](API・統合/Prism.md) |
+
+### メッセージングツール
+
+| ツール名 | 概要 | ファイル |
+|----------|------|----------|
+| Apache Kafka | Apache Kafkaは、分散ストリーミングプラットフォームで、大規模なリアルタイムデータパイプラインとストリーミングアプリケーションを構築するためのオープンソースツールです。高スループット、低レイテンシ、耐障害性、スケーラビリティを備え、イベント駆動アーキテクチャ、マイクロサービス間通信、ログ集約、リアルタイム分析などに利用されます。 | [Apache_Kafka.md](API・統合/Apache_Kafka.md) |
+| RabbitMQ | RabbitMQは、AMQP（Advanced Message Queuing Protocol）プロトコルを実装したオープンソースのメッセージブローカーです。アプリケーション間で信頼性の高いメッセージ配信を行い、非同期処理、負荷分散、疎結合なアーキテクチャを実現します。柔軟なルーティング、多様なメッセージパターン、高可用性、管理UIにより、マイクロサービスやイベント駆動アーキテクチャの構築を支援します。 | [RabbitMQ.md](API・統合/RabbitMQ.md) |
 
 ## CI_CDツール
 
