--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -5,11 +5,11 @@
 ## 統計
 
 - **カテゴリ数**: 45
-- **ツール総数**: 124
+- **ツール総数**: 125
 
 ## 目次
 
-- [API・統合ツール](#api統合ツール) (14ツール)
+- [API・統合ツール](#api統合ツール) (15ツール)
 - [CI_CDツール](#ci-cdツール) (5ツール)
 - [CLIツール](#cliツール) (1ツール)
 - [ITSMツール](#itsmツール) (1ツール)
@@ -56,7 +56,7 @@
 
 ## API・統合ツール
 
-**ツール数**: 14
+**ツール数**: 15
 
 ### APIツール
 
@@ -75,9 +75,10 @@
 | Mockito | Mockitoは、Java/Kotlin向けオープンソースモックフレームワークです。ユニットテストでモックオブジェクト作成、スタブ化、検証を行い、依存関係を持つクラスのテストを容易にします。アノテーション、BDD（Behavior-Driven Development）スタイル、スパイ、引数キャプチャにより、JUnit、TestNG等のテストフレームワークと統合し、テスト駆動開発（TDD）を支援します。 | [Mockito.md](API・統合/Mockito.md) |
 | WireMock | WireMockは、HTTP APIのモック・スタブ化を行うオープンソースツールです。REST APIやSOAPサービスの動作をシミュレートし、実際のサービスなしでAPIクライアントの開発・テストを可能にします。Javaライブラリとして、またスタンドアロンサーバーとして動作し、言語非依存でHTTPレベルでのモックを提供します。リクエストマッチング、レスポンステンプレート、遅延シミュレーション、プロキシ/録画機能など、APIテストに必要な包括的な機能を備えています。 | [WireMock.md](API・統合/WireMock.md) |
 | MockServer | MockServerは、HTTP/HTTPSベースのAPIをモック・スタブ化するオープンソースツールです。REST API、SOAP、その他のHTTPサービスをシミュレートし、実際のサービスなしでクライアント開発やテストを可能にします。リクエストマッチング、レスポンステンプレート、プロキシ、検証機能に加え、OpenAPI仕様からのモック自動生成、強力なUIダッシュボード、WebSocketサポートなど、WireMockの機能を拡張した特徴を持ちます。 | [MockServer.md](API・統合/MockServer.md) |
-| MSW (Mock Service Worker) | MSW (Mock Service Worker)は、Service Worker APIを活用したJavaScript/TypeScript向けのAPIモックライブラリです。ブラウザとNode.js両方で動作し、実際のHTTPリクエストをネットワークレベルでインターセプトしてモックレスポンスを返します。従来のXHR/fetchのモンキーパッチ方式と異なり、アプリケーションコードに手を加えることなくAPIモックを実現します。 | [MSW.md](API・統合/MSW.md) |
+| MSW (Mock Service Worker) | MSW (Mock Service Worker)は、Service Worker APIを活用したJavaScript/TypeScript向けのAPIモックライブラリです。ブラウザとNode.js両方で動作し、実際のHTTPリクエストをネットワークレベルでインターセプトしてモックレスポンスを返します。従来のXHR/fetchのモンキーパッチ方式と異なり、アプリケーションコードに手を加えることなくAPIモックを実現します。 | [MSW.md](テスト/MSW.md) |
 | Mountebank | Mountebankは、複数のネットワークプロトコルに対応したオープンソースのサービス仮想化ツールです。HTTP/HTTPS、TCP、SMTP等、多様なプロトコルをモック・スタブ化でき、マイクロサービスやレガシーシステムの統合テストで威力を発揮します。インポスター（Imposter）と呼ばれる仮想サービスを定義し、スタブ（Stub）でレスポンスを返したり、プロキシ（Proxy）で実サービスと連携したりできます。 | [Mountebank.md](API・統合/Mountebank.md) |
-| Prism | Prismは、OpenAPI仕様（Swagger）をベースにしたHTTP APIモックサーバーです。OpenAPI/Swagger定義ファイルから自動的にモックサーバーを生成し、リクエストのバリデーション、レスポンスの自動生成、エラーケースのシミュレーションを提供します。スキーマ駆動開発（Schema-Driven Development）を強力にサポートし、API仕様書とモックの乖離を防ぎます。 | [Prism.md](API・統合/Prism.md) |
+| Nock | Nockは、Node.js環境でHTTPリクエストをモック・スタブ化するための強力なライブラリです。外部HTTPリクエストを完全に制御し、テストの信頼性と実行速度を向上させます。リクエストの記録・再生機能により、実際のAPIレスポンスを簡単にモック化できます。Jest、Mocha等のテストフレームワークと統合し、Node.jsバックエンドテストに最適です。 | [Nock.md](テスト/Nock.md) |
+| Prism | Prismは、OpenAPI仕様（Swagger）をベースにしたHTTP APIモックサーバーです。OpenAPI/Swagger定義ファイルから自動的にモックサーバーを生成し、リクエストのバリデーション、レスポンスの自動生成、エラーケースのシミュレーションを提供します。スキーマ駆動開発（Schema-Driven Development）を強力にサポートし、API仕様書とモックの乖離を防ぎます。 | [Prism.md](テスト/Prism.md) |
 
 ### メッセージングツール
 
