--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -5,7 +5,7 @@
 ## 統計
 
 - **カテゴリ数**: 45
-- **ツール総数**: 125
+- **ツール総数**: 126
 
 ## 目次
 
@@ -30,7 +30,7 @@
 - [テストツール](#テストツール) (11ツール)
 - [テスト管理ツール](#テスト管理ツール) (2ツール)
 - [データベースツール](#データベースツール) (5ツール)
-- [データベース設計ツール](#データベース設計ツール) (1ツール)
+- [データベース設計ツール](#データベース設計ツール) (2ツール)
 - [データ処理ツール](#データ処理ツール) (1ツール)
 - [ドキュメント管理ツール](#ドキュメント管理ツール) (2ツール)
 - [ネットワークツール](#ネットワークツール) (1ツール)
@@ -285,11 +285,12 @@
 
 ## データベース設計ツール
 
-**ツール数**: 1
+**ツール数**: 2
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | ERDPlus | ERDPlusは、無料のオンラインER図（Entity-Relationship Diagram）作成ツールです。ブラウザでデータベース設計（概念モデル、論理モデル、物理モデル）、UMLクラス図、リレーショナルスキーマを作成し、PNG、PDF、SQL DDL出力をサポートします。学生、教育機関、小規模プロジェクトに適し、インストール不要、アカウント登録不要で利用できます。 | [ERDPlus.md](データベース設計ツール/ERDPlus.md) |
+| tbls | tblsは、既存のデータベーススキーマから自動的にドキュメント・ER図を生成するオープンソースのCLIツールです。実際のデータベース構造を解析し、Markdown形式のドキュメント、PNG/SVG形式のER図、PlantUML/Mermaid形式の図を自動生成します。PostgreSQL、MySQL、BigQuery、Snowflake等の多様なデータベースに対応し、CI/CD統合による自動ドキュメント更新が可能です。 | [tbls.md](データベースツール/tbls.md) |
 
 ## データ処理ツール
 
