--- a/PROJECT_V1/プロジェクト要件チェックリスト_作成計画.md
+++ b/PROJECT_V1/プロジェクト要件チェックリスト_作成計画.md
@@ -169,8 +169,8 @@
 - [ ] 開発方針の定義は必要ですか? (アジャイル/ウォーターフォール)
 
 **技術スタック選択**:
-- [ ] クラウドプラットフォーム: AWS / Azure / GCP / オンプレミス / ハイブリッド
-- [ ] バックエンド開発言語: C# / Java / Python / Node.js (TypeScript/JavaScript) / Go / Ruby / PHP / その他
+- [ ] クラウドプラットフォーム: AWS / Azure / オンプレミス / ハイブリッド
+- [ ] バックエンド開発言語: C# / Java / Python / Node.js (TypeScript/JavaScript) / Go / その他
 - [ ] フロントエンド開発言語: TypeScript / JavaScript / Dart / Kotlin / Swift / その他
 - [ ] フロントエンドフレームワーク: React / Vue.js / Angular / Svelte / Next.js / その他
 - [ ] バックエンドフレームワーク: .NET (ASP.NET Core) / Spring Boot / Django / Flask / Express.js / Nest.js / その他
