--- a/docs/開発工程別ツール選択/12_導入.md
+++ b/docs/開発工程別ツール選択/12_導入.md
@@ -44,13 +44,13 @@
 - [ ] **Docker** - コンテナ化プラットフォーム
   - 💰 料金: 🟢 無料
   - 📝 用途: 開発・テスト・本番環境の標準化、デプロイメント
-  - ✅ メリット: 完全無料、環境標準化、再現性高い
+  - ✅ メリット: 無料、環境標準化、再現性高い
   - ⚠️ デメリット: 学習曲線急、Windowsで制限、リソース多量
 
 - [ ] **Kubernetes** - コンテナオーケストレーション
   - 💰 料金: 🟢 無料
   - 📝 用途: コンテナ管理、スケーリング、本番デプロイ自動化
-  - ✅ メリット: 完全無料、自動スケーリング、高可用性
+  - ✅ メリット: 無料、自動スケーリング、高可用性
   - ⚠️ デメリット: 学習曲線非常に急、セットアップ複雑、オーバーヘッド大
 
 ## 受入テスト
@@ -72,7 +72,7 @@
 - [ ] **Prometheus + Grafana** - メトリクス収集・可視化・アラート（オープンソース）
   - 💰 料金: 🟢 無料
   - 📝 用途: 時系列メトリクス監視、Kubernetes監視、アラート
-  - ✅ メリット: 完全無料オープンソース、K8s標準監視、PromQL強力
+  - ✅ メリット: 無料オープンソース、K8s標準監視、PromQL強力
   - ⚠️ デメリット: セットアップ・運用必要、ログ管理別途必要、長期保存向かない
 
 - [ ] **ELK Stack** - ログ管理・検索・可視化
