--- a/docs/開発工程別ツール選択/1_企画プロセス.md
+++ b/docs/開発工程別ツール選択/1_企画プロセス.md
@@ -62,11 +62,11 @@
   - ✅ メリット: ブラウザベース、リアルタイム協業、テンプレート豊富
   - ⚠️ デメリット: 無料版制限あり、有料版やや高額、オフライン不可
 
-- [ ] **Draw.io (diagrams.net)** - 完全無料のオンライン図作成ツール。オープンソース
+- [ ] **Draw.io (diagrams.net)** - 無料のオンライン図作成ツール。オープンソース
   - 💰 料金: 🟢 無料
   - 📝 用途: 図表作成、フローチャート、ネットワーク図、UML図
   - 📄 詳細: [Draw.io](../../ツール/設計・モデリング/Draw.io.md)
-  - ✅ メリット: 完全無料、オープンソース、ブラウザ/デスクトップ両対応
+  - ✅ メリット: 無料、オープンソース、ブラウザ/デスクトップ両対応
   - ⚠️ デメリット: リアルタイム協業弱い、テンプレート少ない、UI古め
 
 ## 課題管理・プロジェクト管理
