--- a/docs/開発工程別ツール選択/2_要件定義.md
+++ b/docs/開発工程別ツール選択/2_要件定義.md
@@ -45,7 +45,7 @@
   - 💰 料金: 🟢 無料
   - 📝 用途: ビジネスプロセス図作成、BPMN図、業務フロー可視化
   - 📄 詳細: [Bizagi Modeler](../../ツール/設計・モデリング/Bizagi_Modeler.md)
-  - ✅ メリット: 完全無料、BPMN2.0準拠、プロセスシミュレーション
+  - ✅ メリット: 無料、BPMN2.0準拠、プロセスシミュレーション
   - ⚠️ デメリット: オンライン協業弱い、クラウド版は有料、UI古め
 
 ## ユースケース分析
@@ -61,7 +61,7 @@
   - 💰 料金: 🟢 無料
   - 📝 用途: ユースケース図、クラス図、シーケンス図、テキストベースUML
   - 📄 詳細: [PlantUML](../../ツール/設計・モデリング/PlantUML.md)
-  - ✅ メリット: 完全無料、テキストベース、バージョン管理容易
+  - ✅ メリット: 無料、テキストベース、バージョン管理容易
   - ⚠️ デメリット: GUI編集不可、学習曲線あり、レイアウト制御困難
 
 ---
