--- a/docs/開発工程別ツール選択/3_基本設計_アプリケーション.md
+++ b/docs/開発工程別ツール選択/3_基本設計_アプリケーション.md
@@ -44,7 +44,7 @@
   - 💰 料金: 🟢 無料
   - 📝 用途: システム構成図、ネットワーク図、アーキテクチャ図、フローチャート
   - 📄 詳細: [Draw.io](../../ツール/設計・モデリング/Draw.io.md)
-  - ✅ メリット: 完全無料、ブラウザで動作、テンプレート豊富
+  - ✅ メリット: 無料、ブラウザで動作、テンプレート豊富
   - ⚠️ デメリット: UML機能は基本的、コラボ機能弱い、モデリング自動化なし
 
 - [ ] **PlantUML** - テキストベースUMLツール。コードとして管理、バージョン管理容易
@@ -85,7 +85,7 @@
   - 💰 料金: 🟢 無料
   - 📝 用途: ER図作成、データベーススキーマ設計、SQL生成
   - 📄 詳細: [ERDPlus](../../ツール/データベース/ERDPlus.md)
-  - ✅ メリット: 完全無料、ブラウザで動作、SQL生成機能
+  - ✅ メリット: 無料、ブラウザで動作、SQL生成機能
   - ⚠️ デメリット: リアルタイム協業弱い、ER図機能は基本的、ドキュメント生成なし
 
 ## 外部システムI/F設計
