--- a/docs/開発工程別ツール選択/4_基本設計_インフラ.md
+++ b/docs/開発工程別ツール選択/4_基本設計_インフラ.md
@@ -34,11 +34,11 @@
   - ✅ メリット: エンタープライズ標準、豊富なステンシル、Microsoft 365統合
   - ⚠️ デメリット: 高額、Windows中心、クラウド図はLucidchart推奨
 
-- [ ] **draw.io** - 完全無料のオンライン図作成ツール。AWS/Azure/GCPアイコン対応
+- [ ] **draw.io** - 無料のオンライン図作成ツール。AWS/Azure/GCPアイコン対応
   - 💰 料金: 🟢 無料
   - 📝 用途: インフラ構成図、ネットワーク図、システム構成図
   - 📄 詳細: [Draw.io](../../ツール/設計・モデリング/Draw.io.md)
-  - ✅ メリット: 完全無料、AWS/Azure/GCPアイコン、オフライン利用可
+  - ✅ メリット: 無料、AWS/Azure/GCPアイコン、オフライン利用可
   - ⚠️ デメリット: コスト見積不可、実インフラ連携なし、コラボ機能弱い
 
 - [ ] **PlantUML** - テキストベースの図作成ツール。C4モデル、デプロイメント図対応
@@ -62,14 +62,14 @@
   - 💰 料金: 🟢 無料
   - 📝 用途: 監視ダッシュボード設計、メトリクス可視化、アラート定義
   - 📄 詳細: [Grafana](../../ツール/監視・ロギング/Grafana.md)
-  - ✅ メリット: 完全無料（OSS版）、複数データソース対応、豊富なプラグイン
+  - ✅ メリット: 無料（OSS版）、複数データソース対応、豊富なプラグイン
   - ⚠️ デメリット: 初期構築が複雑、統計分析機能限定、Cloud版は高額
 
 - [ ] **Prometheus** - 時系列データベース・監視システム。Kubernetesに最適
   - 💰 料金: 🟢 無料
   - 📝 用途: メトリクス収集・保存、監視基盤設計
   - 📄 詳細: [Prometheus](../../ツール/監視・ロギング/Prometheus.md)
-  - ✅ メリット: 完全無料、Kubernetes標準、スケーラブル
+  - ✅ メリット: 無料、Kubernetes標準、スケーラブル
   - ⚠️ デメリット: 初期構築が複雑、ログ管理機能なし、学習曲線が急
 
 ---
