--- a/docs/開発工程別ツール選択/5_詳細設計_アプリケーション.md
+++ b/docs/開発工程別ツール選択/5_詳細設計_アプリケーション.md
@@ -50,7 +50,7 @@
 - [ ] **MySQL Workbench** - MySQL公式DB設計・管理ツール。ER図、SQL開発、管理
   - 💰 料金: 🟢 無料
   - 📝 用途: データベース設計、ER図、SQL開発、リバースエンジニアリング
-  - ✅ メリット: MySQL公式、完全無料、ER図作成
+  - ✅ メリット: MySQL公式、無料、ER図作成
   - ⚠️ デメリット: MySQL専用、UI古め、動作やや重い
 
 - [ ] **dbdiagram.io** - データベース設計ツール。ER図作成、SQL生成
@@ -64,20 +64,20 @@
 - [ ] **Docker** - コンテナ化プラットフォーム。開発環境の標準化
   - 💰 料金: 🟢 無料
   - 📝 用途: 開発環境構築、環境標準化、マイクロサービス開発
-  - ✅ メリット: 完全無料、環境標準化、再現性高い
+  - ✅ メリット: 無料、環境標準化、再現性高い
   - ⚠️ デメリット: 学習曲線が急、Windowsでは制限あり、リソース消費多い
 
 - [ ] **VS Code** - 軽量マルチ言語コードエディタ。拡張機能で機能拡張
   - 💰 料金: 🟢 無料
   - 📝 用途: 開発環境、IDE、デバッグ環境、ターミナル
   - 📄 詳細: [VS Code](../../ツール/開発ツール/VS_Code.md)
-  - ✅ メリット: 完全無料、軽量で高速、拡張機能豊富
+  - ✅ メリット: 無料、軽量で高速、拡張機能豊富
   - ⚠️ デメリット: IDE比で機能やや少ない、大規模プロジェクト向けでない、標準設定では限定的
 
 - [ ] **Git** - 分散バージョン管理システム。チーム開発の標準
   - 💰 料金: 🟢 無料
   - 📝 用途: バージョン管理、チーム開発、ブランチ管理、コンフリクト解決
-  - ✅ メリット: 完全無料、業界標準、分散管理
+  - ✅ メリット: 無料、業界標準、分散管理
   - ⚠️ デメリット: 学習曲線が急、コマンドライン主体、マージ競合管理複雑
 
 ---
