--- a/docs/ツール/テスト/k6.md
+++ b/docs/ツール/テスト/k6.md
@@ -226,8 +226,8 @@ docker run -i -v $(pwd):/scripts grafana/k6 run /scripts/script.js
 
 | エディション | 価格 | 特徴 |
 |-------------|------|------|
-| **k6 OSS** | 🟢 無料 | オープンソース、AGPLv3 License |
-| **Grafana Cloud k6** | 💰 $49/月〜 | クラウド実行、分散テスト |
+| **k6 OSS** |  無料 | オープンソース、AGPLv3 License |
+| **Grafana Cloud k6** |  $49/月〜 | クラウド実行、分散テスト |
 
 ## メリット
 
@@ -261,3 +261,4 @@ docker run -i -v $(pwd):/scripts grafana/k6 run /scripts/script.js
 **対象工程**: パフォーマンステスト
 **最終更新**: 2025年12月
 **ドキュメントバージョン**: 1.0
+
