--- a/docs/ツール推薦レポート_自動生成.md
+++ b/docs/ツール推薦レポート_自動生成.md
@@ -143,9 +143,9 @@
 | ツール名 | カテゴリ | スコア | マッチ理由 | 概要 |
 |----------|----------|--------|------------|------|
 | [GitHub](../ツール/バージョン管理ツール/GitHub.md) | バージョン管理ツール | 3.5 | キーワード 'コードレビュー' にマッチ + セクション12で選択済み | GitHubは、Gitベースのソースコード管理・コラボレーションプラットフォームです。リポジトリホスティング、プルリクエ... |
-| [ESLint](../ツール/開発ツール/ESLint.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | ESLintは、JavaScriptおよびTypeScriptのための静的コード解析ツールです。コードの品質問題、潜在的... |
+| [ESLint](../ツール/Formatter_Linter/ESLint.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | ESLintは、JavaScriptおよびTypeScriptのための静的コード解析ツールです。コードの品質問題、潜在的... |
 | [Pylint](../ツール/品質・静的解析/Pylint.md) | 品質・静的解析 | 1.5 | キーワード 'コーディング規約' にマッチ | Pylintは、Python公式の静的コード解析ツールです。コードスタイル（PEP 8）、エラー、バグ、コードスメル、複... |
-| [Prettier](../ツール/開発ツール/Prettier.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | Prettierは、「妥協なし」（Opinionated）のコードフォーマッターです。JavaScript、TypeSc... |
+| [Prettier](../ツール/Formatter_Linter/Prettier.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | Prettierは、「妥協なし」（Opinionated）のコードフォーマッターです。JavaScript、TypeSc... |
 
 ---
 
@@ -196,9 +196,9 @@
 |----------|----------|--------|------------|------|
 | [GitHub](../ツール/バージョン管理ツール/GitHub.md) | バージョン管理ツール | 3.5 | キーワード 'コードレビュー' にマッチ + セクション12で選択済み | GitHubは、Gitベースのソースコード管理・コラボレーションプラットフォームです。リポジトリホスティング、プルリクエ... |
 | [SonarQube](../ツール/コード品質ツール/SonarQube.md) | コード品質ツール | 1.5 | キーワード '静的コード解析' にマッチ | SonarQubeは、ソースコード品質管理プラットフォームです。静的コード解析、バグ検出、脆弱性スキャン、コードスメル検... |
-| [ESLint](../ツール/開発ツール/ESLint.md) | 開発ツール | 1.5 | キーワード 'Linter' にマッチ | ESLintは、JavaScriptおよびTypeScriptのための静的コード解析ツールです。コードの品質問題、潜在的... |
+| [ESLint](../ツール/Formatter_Linter/ESLint.md) | 開発ツール | 1.5 | キーワード 'Linter' にマッチ | ESLintは、JavaScriptおよびTypeScriptのための静的コード解析ツールです。コードの品質問題、潜在的... |
 | [Pylint](../ツール/品質・静的解析/Pylint.md) | 品質・静的解析 | 1.5 | キーワード 'Linter' にマッチ | Pylintは、Python公式の静的コード解析ツールです。コードスタイル（PEP 8）、エラー、バグ、コードスメル、複... |
-| [Prettier](../ツール/開発ツール/Prettier.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | Prettierは、「妥協なし」（Opinionated）のコードフォーマッターです。JavaScript、TypeSc... |
+| [Prettier](../ツール/Formatter_Linter/Prettier.md) | 開発ツール | 1.5 | キーワード 'コーディング規約' にマッチ | Prettierは、「妥協なし」（Opinionated）のコードフォーマッターです。JavaScript、TypeSc... |
 | [Snyk](../ツール/セキュリティ/Snyk.md) | セキュリティ | 1.5 | キーワード 'セキュリティスキャン' にマッチ | Snykは、開発者向けのセキュリティプラットフォームで、オープンソース依存関係、コンテナイメージ、Infrastruct... |
 | [OWASP_ZAP](../ツール/セキュリティ/OWASP_ZAP.md) | セキュリティ | 1.5 | キーワード 'セキュリティスキャン' にマッチ | OWASP ZAP（Zed Attack Proxy）は、OWASP（Open Web Application Secu... |
 | [Checkov](../ツール/セキュリティ/Checkov.md) | セキュリティ | 1.5 | キーワード 'セキュリティスキャン' にマッチ | Checkovは、Bridgecrewが開発したInfrastructure as Code（IaC）のためのオープンソ... |
@@ -297,3 +297,4 @@
 ---
 
 **END OF REPORT**
+
