--- a/docs/ツール索引.md
+++ b/docs/ツール索引.md
@@ -109,8 +109,8 @@
 
 | ツール名 | 料金 | 特徴 | 主な用途 |
 |---------|------|------|---------|
-| [IntelliJ IDEA](./ツール/開発ツール/IntelliJ_IDEA.md) | 🟡 一部無料 | Java統合開発環境 | Java/Kotlin開発 |
-| [Visual Studio Code](./ツール/開発ツール/VS_Code.md) | 🟢 無料 | 軽量コードエディタ | マルチ言語開発 |
+| [IntelliJ IDEA](./ツール/IDEツール/IntelliJ_IDEA.md) | 🟡 一部無料 | Java統合開発環境 | Java/Kotlin開発 |
+| [Visual Studio Code](./ツール/IDEツール/VS_Code.md) | 🟢 無料 | 軽量コードエディタ | マルチ言語開発 |
 
 ### 監視ツール
 
@@ -170,7 +170,7 @@
 | GitHub Actions | CI/CDツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/バージョン管理・CI_CD/GitHub_Actions.md) |
 | GitLab CI/CD | CI/CDツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/バージョン管理・CI_CD/GitLab_CI_CD.md) |
 | Grafana | 監視ツール | 🟢 無料 | [📄 ドキュメント](./ツール/監視_ロギング/Grafana.md) |
-| IntelliJ IDEA | 開発環境ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/開発ツール/IntelliJ_IDEA.md) |
+| IntelliJ IDEA | 開発環境ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/IDEツール/IntelliJ_IDEA.md) |
 | IPA 非機能要求グレード | 標準・ガイドライン | 🟢 無料 | [📄 ドキュメント](./ツール/標準_ガイドライン/IPA_非機能要求グレード.md) |
 | JasperReports | 帳票ツール | 🟢 無料 | [📄 ドキュメント](./ツール/帳票_データ処理/JasperReports.md) |
 | Jenkins | CI/CDツール | 🟢 無料 | [📄 ドキュメント](./ツール/バージョン管理・CI_CD/Jenkins.md) |
@@ -196,7 +196,7 @@
 | Terraform | IaCツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/IaC・インフラ管理/Terraform.md) |
 | Trello | プロジェクト管理ツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/プロジェクト管理_ドキュメント/Trello.md) |
 | Visual Paradigm | UMLツール | 🟡 一部無料 | [📄 ドキュメント](./ツール/設計_モデリング/Visual_Paradigm.md) |
-| Visual Studio Code | 開発環境ツール | 🟢 無料 | [📄 ドキュメント](./ツール/開発ツール/VS_Code.md) |
+| Visual Studio Code | 開発環境ツール | 🟢 無料 | [📄 ドキュメント](./ツール/IDEツール/VS_Code.md) |
 
 ---
 
@@ -398,4 +398,5 @@
 - **v3.0 (2025-11-30)**: Phase 1優先ツール23個を追加（IaC、CI/CD、テスト、セキュリティ、コンテナ、プロジェクト管理、開発環境、監視、データベースツール）
 - **v2.0**: カテゴリ別ツール統合、22ツールを文書化
 - **v1.0**: 初版作成
+
 
