--- a/docs/開発工程別ツール選択/5_詳細設計_アプリケーション.md
+++ b/docs/開発工程別ツール選択/5_詳細設計_アプリケーション.md
@@ -70,7 +70,7 @@
 - [ ] **VS Code** - 軽量マルチ言語コードエディタ。拡張機能で機能拡張
   - 💰 料金: 🟢 無料
   - 📝 用途: 開発環境、IDE、デバッグ環境、ターミナル
-  - 📄 詳細: [VS Code](../../ツール/開発ツール/VS_Code.md)
+  - 📄 詳細: [VS Code](../../ツール/IDEツール/VS_Code.md)
   - ✅ メリット: 無料、軽量で高速、拡張機能豊富
   - ⚠️ デメリット: IDE比で機能やや少ない、大規模プロジェクト向けでない、標準設定では限定的
 
@@ -97,3 +97,4 @@
 ---
 
 **最終更新**: 2025-12-06
+
