--- a/docs/開発工程別ツール選択/7_実装_アプリケーション.md
+++ b/docs/開発工程別ツール選択/7_実装_アプリケーション.md
@@ -22,7 +22,7 @@
 - [ ] **IntelliJ IDEA** - JetBrains製Java/Kotlin IDE。強力なリファクタリング
   - 💰 料金: 🟡 一部無料
   - 📝 用途: Java実装、リファクタリング、デバッグ
-  - 📄 詳細: [IntelliJ IDEA](../../ツール/開発ツール/IntelliJ_IDEA.md)
+  - 📄 詳細: [IntelliJ IDEA](../../ツール/IDEツール/IntelliJ_IDEA.md)
   - ✅ メリット: Java開発最適化、リファクタリング強力、Spring統合
   - ⚠️ デメリット: Ultimate版有料、メモリ使用量大、起動遅い
 
@@ -53,7 +53,7 @@
 - [ ] **VS Code** - Microsoft製軽量エディタ。TypeScript標準サポート
   - 💰 料金: 🟢 無料
   - 📝 用途: TypeScript開発、デバッグ、ターミナル
-  - 📄 詳細: [VS Code](../../ツール/開発ツール/VS_Code.md)
+  - 📄 詳細: [VS Code](../../ツール/IDEツール/VS_Code.md)
   - ✅ メリット: TypeScript最適化、無料、拡張機能豊富
   - ⚠️ デメリット: 大規模PJ重い、フルIDEではない
 
@@ -89,3 +89,4 @@
 ---
 
 **最終更新**: 2025-12-06
+
