--- a/docs/ツール/ツール一覧.md
+++ b/docs/ツール/ツール一覧.md
@@ -5,29 +5,29 @@
 ## 統計
 
 - **カテゴリ数**: 29
-- **ツール総数**: 127
+- **ツール総数**: 128
 
 ## 目次
 
 - [API_統合](#api-統合) (6ツール)
 - [APIテスト](#apiテスト) (8ツール)
-- [CLI_運用管理](#cli-運用管理) (1ツール)
+- [CLI_運用管理](#cli-運用管理) (2ツール)
 - [E2Eテスト](#e2eテスト) (6ツール)
 - [Formatter_Linter](#formatter-linter) (8ツール)
 - [IDEツール](#ideツール) (3ツール)
 - [IaC_インフラ管理](#iac-インフラ管理) (8ツール)
 - [インフラテスト](#インフラテスト) (5ツール)
-- [コラボレーションツール](#コラボレーションツール) (1ツール)
+- [コラボレーション](#コラボレーション) (1ツール)
 - [コンテナ_オーケストレーション](#コンテナ-オーケストレーション) (2ツール)
-- [コード品質ツール](#コード品質ツール) (1ツール)
+- [コード品質](#コード品質) (1ツール)
 - [セキュリティ](#セキュリティ) (5ツール)
 - [テスト管理](#テスト管理) (4ツール)
-- [デザインツール](#デザインツール) (2ツール)
+- [デザイン](#デザイン) (2ツール)
 - [データベース](#データベース) (5ツール)
-- [バッチ処理_スケジューラ](#バッチ処理-スケジューラ) (1ツール)
+- [バッチ処理](#バッチ処理) (1ツール)
 - [バージョン管理_CI_CD](#バージョン管理-ci-cd) (9ツール)
-- [パッケージ管理ツール](#パッケージ管理ツール) (3ツール)
-- [ビルド_タスク管理](#ビルド-タスク管理) (1ツール)
+- [パッケージ管理](#パッケージ管理) (3ツール)
+- [ビルド](#ビルド) (1ツール)
 - [プロジェクト管理_ドキュメント](#プロジェクト管理-ドキュメント) (6ツール)
 - [単体テスト](#単体テスト) (11ツール)
 - [帳票_データ処理](#帳票-データ処理) (6ツール)
@@ -36,8 +36,8 @@
 - [監視_ロギング](#監視-ロギング) (6ツール)
 - [設計_モデリング](#設計-モデリング) (4ツール)
 - [運用_ITSM](#運用-itsm) (2ツール)
-- [開発環境_自動化](#開発環境-自動化) (1ツール)
-- [静的解析_型チェック](#静的解析-型チェック) (3ツール)
+- [開発環境](#開発環境) (1ツール)
+- [静的解析](#静的解析) (3ツール)
 
 ## API_統合
 
@@ -69,10 +69,11 @@
 
 ## CLI_運用管理
 
-**ツール数**: 1
+**ツール数**: 2
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
+| AWS CLI | AWS CLI は AWS リソースをコマンドラインで操作する公式ツールである。インフラ構築、日常運用、自動化スクリプト、CI/CD 実行に幅広く利用できる。 | [AWS_CLI.md](CLI_運用管理\AWS_CLI.md) |
 | Azure CLI | Azure CLI は Azure リソースをコマンドラインで操作する公式ツールである。スクリプト化しやすく、インフラ構築・運用自動化・日常オペレーションに広く利用される。 | [Azure_CLI.md](CLI_運用管理\Azure_CLI.md) |
 
 ## E2Eテスト
@@ -140,13 +141,13 @@
 | Litmus | Litmus は Kubernetes 向けのカオスエンジニアリングプラットフォームである。障害注入と実験管理を通じて、アプリケーションやインフラの耐障害性を検証し、運用改善に繋げられる。 | [Litmus.md](インフラテスト\Litmus.md) |
 | Terratest | Terratest は Go で IaC とインフラの実行時検証を行うテストライブラリである。Terraform、Kubernetes、クラウド環境を対象に、実際に構築したリソースへテストを実行して品質を確認できる。 | [Terratest.md](インフラテスト\Terratest.md) |
 
-## コラボレーションツール
+## コラボレーション
 
 **ツール数**: 1
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Slack | Slack は、チャンネル型のビジネスコミュニケーションツールである。メッセージ、スレッド、ファイル共有、通知連携を一元化し、開発・運用・業務連絡を同じワークスペースで管理できる。 | [Slack.md](コラボレーションツール\Slack.md) |
+| Slack | Slack は、チャンネル型のビジネスコミュニケーションツールである。メッセージ、スレッド、ファイル共有、通知連携を一元化し、開発・運用・業務連絡を同じワークスペースで管理できる。 | [Slack.md](コラボレーション\Slack.md) |
 
 ## コンテナ_オーケストレーション
 
@@ -155,15 +156,15 @@
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
 | Docker | Docker は、アプリケーションと依存関係をコンテナとしてパッケージ化し、環境差分を抑えて実行できるプラットフォームである。Dockerfile と Docker Compose を使い、開発環境の標準化からCI/CDまで一貫して運用しやすい。 | [Docker.md](コンテナ_オーケストレーション\Docker.md) |
-| Rancher | Rancher は、SUSE が提供するオープンソースの Kubernetes 管理プラットフォームです。複数の Kubernetes クラスタを統合的に管理し、マルチクラスタ、マルチクラウド環境での運用を簡素化します。Web UI による直感的な操作、認証・認可、モニタリング、カタログアプリケーションのデプロイなど、エンタープライズ環境に必要な機能を包括的に提供します。 | [Rancher.md](コンテナ_オーケストレーション\Rancher.md) |
+| Rancher | Rancher は、複数 Kubernetes クラスタを一元管理するためのプラットフォームである。オンプレミス、クラウド、エッジに分散したクラスタを単一UIで運用し、アクセス制御、アプリ配布、監視を統合できる。 | [Rancher.md](コンテナ_オーケストレーション\Rancher.md) |
 
-## コード品質ツール
+## コード品質
 
 **ツール数**: 1
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| SonarQube | SonarQube は、静的解析を中心にコード品質を継続監視するプラットフォームである。バグ、脆弱性、コードスメル、重複、テストカバレッジを可視化し、Quality Gate でリリース可否を統制できる。 | [SonarQube.md](コード品質ツール\SonarQube.md) |
+| SonarQube | SonarQube は、静的解析を中心にコード品質を継続監視するプラットフォームである。バグ、脆弱性、コードスメル、重複、テストカバレッジを可視化し、Quality Gate でリリース可否を統制できる。 | [SonarQube.md](コード品質\SonarQube.md) |
 
 ## セキュリティ
 
@@ -171,8 +172,8 @@
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Checkov | Checkovは、Bridgecrewが開発したInfrastructure as Code（IaC）のためのオープンソース静的解析ツールである。Terraform、CloudFormation、Kubernetes、Dockerfileなど、幅広いIaCフレームワークに対応し、デプロイ前にセキュリティとコンプライアンスの問題を検出する。2,000以上のポリシーを組み込みで持ち、CIS Bench... | [Checkov.md](セキュリティ\Checkov.md) |
-| Microsoft Threat Modeling Tool | Microsoft Threat Modeling Tool（TMT）は、ソフトウェア設計段階でセキュリティ脅威を特定・分析するための無料ツールである。STRIDE（Spoofing、Tampering、Repudiation、Information Disclosure、Denial of Service、Elevation of Privilege）フレームワークに基づき、システムアーキテクチ... | [Microsoft_Threat_Modeling_Tool.md](セキュリティ\Microsoft_Threat_Modeling_Tool.md) |
+| Checkov | Checkov は、Infrastructure as Code（IaC）を対象にした静的セキュリティスキャンツールである。Terraform、CloudFormation、Kubernetes、Dockerfile などを解析し、デプロイ前に設定不備やコンプライアンス違反を検出できる。Shift Left Security を実践する IaC セキュリティゲートとして利用しやすい。 | [Checkov.md](セキュリティ\Checkov.md) |
+| Microsoft Threat Modeling Tool | Microsoft Threat Modeling Tool（TMT）は、設計段階で脅威を洗い出すための脅威モデリングツールである。データフロー図（DFD）を作成すると、STRIDE（Spoofing、Tampering、Repudiation、Information Disclosure、Denial of Service、Elevation of Privilege）に基づいて脅威候補を自動抽... | [Microsoft_Threat_Modeling_Tool.md](セキュリティ\Microsoft_Threat_Modeling_Tool.md) |
 | OWASP Dependency-Check | OWASP Dependency-Checkは、プロジェクトの依存ライブラリに含まれる既知の脆弱性を検出するソフトウェアコンポジション分析（SCA）ツールである。依存関係からベンダー・製品・バージョン情報を収集し、NIST National Vulnerability Database（NVD）のCVEデータと照合して脆弱性を特定する。エビデンスベースの分析エンジンにより、信頼度付きのCPEマッチ... | [OWASP_Dependency_Check.md](セキュリティ\OWASP_Dependency_Check.md) |
 | OWASP ZAP (Zed Attack Proxy) | OWASP ZAP（Zed Attack Proxy）は、OWASP（Open Web Application Security Project）が開発した、世界で最も広く使われているオープンソースのWebアプリケーション脆弱性スキャナーです。ペネトレーションテスト（侵入テスト）とセキュリティテストを自動化し、SQL Injection、XSS、CSRF等の一般的な脆弱性を検出します。初心者からセ... | [OWASP_ZAP.md](セキュリティ\OWASP_ZAP.md) |
 | Trivy | Trivyは、Aqua Security製のオールインワンセキュリティスキャナーです。コンテナイメージ、ファイルシステム、Gitリポジトリ、Kubernetesクラスタ、IaCファイルなど多様なターゲットを対象に、脆弱性（CVE）、設定ミス、シークレット漏洩、ライセンス違反を検出します。脆弱性データベースは6時間ごとに自動更新され、スキャン時にDB取得を行うため、常に最新の状態でチェックが可能です... | [Trivy.md](セキュリティ\Trivy.md) |
@@ -188,14 +189,14 @@
 | Xray | Xrayは、Atlassian Jiraに統合されるテスト管理アドオンです。Jira課題としてテストケース、テストセット、テストプラン、テスト実行を管理し、要件（Story/Epic）→テストケース→不具合（Bug）の完全なトレーサビリティを実現します。JUnit/TestNG/pytest等の自動テスト結果のインポート、Cucumber/Behaveとの BDD統合、REST APIによるCI/... | [Xray.md](テスト管理\Xray.md) |
 | Zephyr for Jira | Zephyr for Jiraは、Atlassian Jiraに統合されたテスト管理ツールです。Jira課題（Issue）とシームレスに連携し、テストケース作成、テスト実行、結果記録、レポート生成をJira内で完結できます。アジャイル・ウォーターフォール両方の開発手法に対応し、テストプロセスの可視化とトレーサビリティを向上させます。 | [Zephyr_for_Jira.md](テスト管理\Zephyr_for_Jira.md) |
 
-## デザインツール
+## デザイン
 
 **ツール数**: 2
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Figma | Figmaは、クラウドベースのUI/UXデザインツールです。リアルタイムコラボレーション、コンポーネント、Auto Layout、プロトタイピング、デザインシステム、デベロッパーハンドオフにより、Webサイト・モバイルアプリのデザインを効率化します。Adobe買収予定、ブラウザベース、Sketch代替で急速に普及しています。 | [Figma.md](デザインツール\Figma.md) |
-| Pencil | Pencil は、IDE 内で動作するベクターデザインツールである。`.pen` ファイルをGit管理しながら、デザインとコードを同じリポジトリで運用できる。MCP 経由で AI アシスタントと連携し、UI 生成や Design to Code を実行できる。 本ドキュメントは `https://www.pencil.dev/` の Pencil を対象としている（旧OSSの「Pencil Pro... | [Pencil.md](デザインツール\Pencil.md) |
+| Figma | Figmaは、クラウドベースのUI/UXデザインツールです。リアルタイムコラボレーション、コンポーネント、Auto Layout、プロトタイピング、デザインシステム、デベロッパーハンドオフにより、Webサイト・モバイルアプリのデザインを効率化します。Adobe買収予定、ブラウザベース、Sketch代替で急速に普及しています。 | [Figma.md](デザイン\Figma.md) |
+| Pencil | Pencil は、IDE 内で動作するベクターデザインツールである。`.pen` ファイルをGit管理しながら、デザインとコードを同じリポジトリで運用できる。MCP 経由で AI アシスタントと連携し、UI 生成や Design to Code を実行できる。 本ドキュメントは `https://www.pencil.dev/` の Pencil を対象としている（旧OSSの「Pencil Pro... | [Pencil.md](デザイン\Pencil.md) |
 
 ## データベース
 
@@ -209,13 +210,13 @@
 | MySQL Workbench | MySQL Workbenchは、Oracle社が提供するMySQL公式の統合開発環境（IDE）です。データベース設計、SQL開発、サーバー管理を一つのツールで行える包括的なGUIツールで、ER図によるビジュアルデータベース設計、SQLエディタ、データモデリング、リバースエンジニアリング、データベース移行などの機能を提供します。 | [MySQL_Workbench.md](データベース\MySQL_Workbench.md) |
 | tbls | **tbls**（テーブルス）は、既存のデータベーススキーマから自動的にドキュメント・ER図を生成するオープンソースのCLIツールです。実際のデータベース構造を解析し、Markdown形式のドキュメント、PNG/SVG形式のER図、PlantUML/Mermaid形式の図を自動生成します。リバースエンジニアリングにより、コードとドキュメントの乖離を防ぎ、データベース設計書のメンテナンスを自動化しま... | [tbls.md](データベース\tbls.md) |
 
-## バッチ処理_スケジューラ
+## バッチ処理
 
 **ツール数**: 1
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Quartz Scheduler | Quartz Scheduler は Java 向けのジョブスケジューラライブラリである。定期実行、カレンダー制御、再実行制御などを行い、バッチや定期処理の実装を標準化しやすい。 | [Quartz_Scheduler.md](バッチ処理_スケジューラ\Quartz_Scheduler.md) |
+| Quartz Scheduler | Quartz Scheduler は Java 向けのジョブスケジューラライブラリである。定期実行、カレンダー制御、再実行制御などを行い、バッチや定期処理の実装を標準化しやすい。 | [Quartz_Scheduler.md](バッチ処理\Quartz_Scheduler.md) |
 
 ## バージョン管理_CI_CD
 
@@ -233,23 +234,23 @@
 | JFrog Artifactory OSS | JFrog Artifactory OSS は、バージョン管理CI_CD で活用される代表的なツールである。要件整理から運用定着までの一連の作業を効率化し、成果物の品質と再現性を高める目的で利用する。 | [JFrog_Artifactory_OSS.md](バージョン管理_CI_CD\JFrog_Artifactory_OSS.md) |
 | Reviewdog | Reviewdog は、バージョン管理CI_CD で活用される代表的なツールである。要件整理から運用定着までの一連の作業を効率化し、成果物の品質と再現性を高める目的で利用する。 | [Reviewdog.md](バージョン管理_CI_CD\Reviewdog.md) |
 
-## パッケージ管理ツール
+## パッケージ管理
 
 **ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| npm | npmは、Node.js標準のパッケージ管理ツールです。package.json、npm registry（200万+パッケージ）、バージョン管理、依存関係解決、スクリプト実行により、JavaScript/Node.jsプロジェクトを効率化します。Node.js同梱、世界最大のパッケージレジストリで広く使用されています。 | [npm.md](パッケージ管理ツール\npm.md) |
-| NuGet | NuGetは、.NETエコシステムにおける公式パッケージマネージャーです。nuget.orgを中心としたパブリックレジストリから、数十万のライブラリを検索・インストール・更新できます。`dotnet` CLIおよびVisual Studioと密接に統合されており、PackageReference形式による宣言的な依存関係管理、Central Package Management（CPM）によるソリ... | [NuGet.md](パッケージ管理ツール\NuGet.md) |
-| Poetry | Poetryは、Pythonプロジェクトの依存関係管理とパッケージビルドを一元的に行うツールです。`pyproject.toml` による宣言的な設定と `poetry.lock` による厳密な依存解決により、開発環境の再現性を保証します。仮想環境の自動管理、依存グループ（dev/test）の分離、PyPIへのパッケージ公開、CI/CDパイプラインとの統合など、Pythonプロジェクトのライフサイ... | [Poetry.md](パッケージ管理ツール\Poetry.md) |
+| npm | npmは、Node.js標準のパッケージ管理ツールです。package.json、npm registry（200万+パッケージ）、バージョン管理、依存関係解決、スクリプト実行により、JavaScript/Node.jsプロジェクトを効率化します。Node.js同梱、世界最大のパッケージレジストリで広く使用されています。 | [npm.md](パッケージ管理\npm.md) |
+| NuGet | NuGetは、.NETエコシステムにおける公式パッケージマネージャーです。nuget.orgを中心としたパブリックレジストリから、数十万のライブラリを検索・インストール・更新できます。`dotnet` CLIおよびVisual Studioと密接に統合されており、PackageReference形式による宣言的な依存関係管理、Central Package Management（CPM）によるソリ... | [NuGet.md](パッケージ管理\NuGet.md) |
+| Poetry | Poetryは、Pythonプロジェクトの依存関係管理とパッケージビルドを一元的に行うツールです。`pyproject.toml` による宣言的な設定と `poetry.lock` による厳密な依存解決により、開発環境の再現性を保証します。仮想環境の自動管理、依存グループ（dev/test）の分離、PyPIへのパッケージ公開、CI/CDパイプラインとの統合など、Pythonプロジェクトのライフサイ... | [Poetry.md](パッケージ管理\Poetry.md) |
 
-## ビルド_タスク管理
+## ビルド
 
 **ツール数**: 1
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Maven | Maven は Java プロジェクト向けのビルド・依存管理ツールである。標準ライフサイクルに沿ってビルド、テスト、パッケージングを実行でき、チーム開発での再現性を高めやすい。 | [Maven.md](ビルド_タスク管理\Maven.md) |
+| Maven | Maven は Java プロジェクト向けのビルド・依存管理ツールである。標準ライフサイクルに沿ってビルド、テスト、パッケージングを実行でき、チーム開発での再現性を高めやすい。 | [Maven.md](ビルド\Maven.md) |
 
 ## プロジェクト管理_ドキュメント
 
@@ -351,23 +352,23 @@
 | ServiceNow | ServiceNowは、エンタープライズ向けのクラウドベースITサービスマネジメント（ITSM）プラットフォームです。インシデント管理、変更管理、問題管理、CMDB（構成管理データベース）、サービスカタログなどのITILプロセスを統合的に提供し、IT運用の標準化と自動化を実現します。Flow Designerによるノーコード/ローコードのワークフロー自動化、Integration Hubによる外部... | [ServiceNow.md](運用_ITSM\ServiceNow.md) |
 | Zammad | Zammadは、オープンソースのWebベースヘルプデスク・チケット管理システムです。メール、チャット、電話、SNS（Twitter/Facebook）などマルチチャネルからの問い合わせを統合管理し、チケットベースのワークフローで効率的なカスタマーサポートを実現します。ナレッジベース、SLA管理、REST API、LDAP/Active Directory連携など、エンタープライズ運用に必要な機能を... | [Zammad.md](運用_ITSM\Zammad.md) |
 
-## 開発環境_自動化
+## 開発環境
 
 **ツール数**: 1
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| Dev Container | Dev Container はコンテナを使って開発環境を定義・共有する仕組みである。ローカル環境差異を減らし、チーム全体で同じ依存関係・ツール群を再現しやすくする。 | [DevContainer.md](開発環境_自動化\DevContainer.md) |
+| Dev Container | Dev Container はコンテナを使って開発環境を定義・共有する仕組みである。ローカル環境差異を減らし、チーム全体で同じ依存関係・ツール群を再現しやすくする。 | [DevContainer.md](開発環境\DevContainer.md) |
 
-## 静的解析_型チェック
+## 静的解析
 
 **ツール数**: 3
 
 | ツール名 | 概要 | ファイル |
 |----------|------|----------|
-| mypy | mypy は Python の型チェックツールである。型注釈を活用して実行前に型不整合を検出し、リファクタ時の安全性と保守性を高められる。 | [mypy.md](静的解析_型チェック\mypy.md) |
-| Roslyn Analyzers | Roslyn Analyzers は .NET コードを静的解析して品質問題や規約違反を検出する機能群である。コンパイル時に警告やエラーとして可視化でき、品質基準の自動適用に有効。 | [Roslyn_Analyzers.md](静的解析_型チェック\Roslyn_Analyzers.md) |
-| SpotBugs | SpotBugs は Java バイトコードを解析して不具合パターンを検出する静的解析ツールである。NullPointer や誤実装につながる典型問題を早期に見つけ、品質事故の予防に役立つ。 | [SpotBugs.md](静的解析_型チェック\SpotBugs.md) |
+| mypy | mypy は Python の型チェックツールである。型注釈を活用して実行前に型不整合を検出し、リファクタ時の安全性と保守性を高められる。 | [mypy.md](静的解析\mypy.md) |
+| Roslyn Analyzers | Roslyn Analyzers は .NET コードを静的解析して品質問題や規約違反を検出する機能群である。コンパイル時に警告やエラーとして可視化でき、品質基準の自動適用に有効。 | [Roslyn_Analyzers.md](静的解析\Roslyn_Analyzers.md) |
+| SpotBugs | SpotBugs は Java バイトコードを解析して不具合パターンを検出する静的解析ツールである。NullPointer や誤実装につながる典型問題を早期に見つけ、品質事故の予防に役立つ。 | [SpotBugs.md](静的解析\SpotBugs.md) |
 
 ---
 
