--- a/docs/ツール/性能テスト/k6.md
+++ b/docs/ツール/性能テスト/k6.md
@@ -1,264 +1,70 @@
 # k6
 
 ## 概要
+k6 は JavaScript で性能テストを記述し、API や Web サービスの負荷特性を検証できるツールです。開発フローに組み込みやすく、自動化運用に向いています。
 
-k6は、Grafana Labs製のオープンソース負荷テストツールです。JavaScript DSL、CLI実行、メトリクス（HTTP、WebSocket）、シナリオベーステスト、負荷プロファイル（ランプアップ、スパイク）により、Webアプリケーションのパフォーマンステスト・負荷テストを実現します。開発者フレンドリー、CI/CD統合、Grafana/Prometheusエクスポートで広く採用されています。
+## 料金
+| プラン | 料金 | 備考 |
+|---|---:|---|
+| OSS | 無料 | ローカル/CI で利用可能 |
+| k6 Cloud | 有料 | 大規模実行・可視化・共有機能を提供 |
+
+## 主な特徴
+| 特徴 | 内容 |
+|---|---|
+| JavaScript 記述 | 開発者が扱いやすい |
+| 自動化適性 | CI/CD パイプラインに統合しやすい |
+| 指標設計 | 閾値を明示して合否判定しやすい |
 
 ## 主な機能
+| 機能 | 用途 | 実務での使いどころ |
+|---|---|---|
+| 負荷モデル | 段階増加・一定・スパイク負荷 | リリース前検証 |
+| 閾値判定 | SLO/SLA 合否評価 | 自動ゲート判定 |
+| 結果出力 | 指標可視化と比較 | 回帰分析 |
 
-### 1. 負荷テスト
-- **HTTP**: REST API、Webサイト
-- **WebSocket**: WebSocket接続
-- **gRPC**: gRPCサービス
-- **ブラウザ**: ヘッドレスブラウザ
+## インストールとセットアップ
+1. k6 実行環境を整えます。
+2. 対象 API、認証、テストデータ、目標指標を定義します。
+3. 負荷パターンと閾値を設定します。
 
-### 2. シナリオ
-- **Virtual Users**: VU数設定
-- **ランプアップ**: 徐々に負荷増加
-- **スパイク**: 急激な負荷
-- **ステップ**: 段階的負荷
-
-### 3. メトリクス
-- **HTTP**: レスポンスタイム、成功率
-- **カスタムメトリクス**: Counter、Gauge、Trend
-- **Checks**: アサーション
-- **Thresholds**: 合格基準
-
-### 4. 統合
-- **Grafana Cloud**: k6 Cloud
-- **Prometheus**: Prometheusエクスポート
-- **CI/CD**: GitHub Actions、GitLab CI
-
-## 利用方法
-
-### インストール
-
-```bash
-# macOS
-brew install k6
-
-# Linux
-sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
-echo "deb https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
-sudo apt-get update
-sudo apt-get install k6
-
-# Docker
-docker pull grafana/k6
-```
-
-### 基本スクリプト
-
-```javascript
-// script.js
-import http from 'k6/http';
-import { check, sleep } from 'k6';
-
-export let options = {
-  vus: 10,           // 10 Virtual Users
-  duration: '30s',   // 30秒間実行
-};
-
-export default function () {
-  let response = http.get('https://test.k6.io');
-
-  check(response, {
-    'status is 200': (r) => r.status === 200,
-    'response time < 500ms': (r) => r.timings.duration < 500,
-  });
-
-  sleep(1);
-}
-```
-
-```bash
-# 実行
-k6 run script.js
-```
-
-### ランプアップ
-
-```javascript
-export let options = {
-  stages: [
-    { duration: '30s', target: 20 },   // 30秒で20 VUまで増加
-    { duration: '1m', target: 100 },   // 1分で100 VUまで増加
-    { duration: '30s', target: 0 },    // 30秒で0 VUまで減少
-  ],
-};
-
-export default function () {
-  http.get('https://test.k6.io');
-  sleep(1);
-}
-```
-
-### POST リクエスト
-
-```javascript
-import http from 'k6/http';
-
-export default function () {
-  let url = 'https://httpbin.test.k6.io/post';
-  let payload = JSON.stringify({
-    name: 'Alice',
-    email: 'alice@example.com',
-  });
-
-  let params = {
-    headers: {
-      'Content-Type': 'application/json',
-    },
-  };
-
-  let response = http.post(url, payload, params);
-  check(response, {
-    'status is 200': (r) => r.status === 200,
-  });
-}
-```
-
-### Checks と Thresholds
-
-```javascript
-import http from 'k6/http';
-import { check } from 'k6';
-
-export let options = {
-  thresholds: {
-    http_req_duration: ['p(95)<500'],   // 95%ile < 500ms
-    http_req_failed: ['rate<0.01'],     // エラー率 < 1%
-    checks: ['rate>0.95'],              // Check成功率 > 95%
-  },
-};
-
-export default function () {
-  let response = http.get('https://test.k6.io');
-
-  check(response, {
-    'status is 200': (r) => r.status === 200,
-    'body contains text': (r) => r.body.includes('Collection'),
-  });
-}
-```
-
-### カスタムメトリクス
-
-```javascript
-import http from 'k6/http';
-import { Counter, Gauge, Trend } from 'k6/metrics';
-
-let myCounter = new Counter('my_counter');
-let myGauge = new Gauge('my_gauge');
-let myTrend = new Trend('my_trend');
-
-export default function () {
-  let response = http.get('https://test.k6.io');
-
-  myCounter.add(1);
-  myGauge.add(response.body.length);
-  myTrend.add(response.timings.duration);
-}
-```
-
-### シナリオ
-
-```javascript
-export let options = {
-  scenarios: {
-    constant_load: {
-      executor: 'constant-vus',
-      vus: 10,
-      duration: '30s',
-    },
-    ramping_load: {
-      executor: 'ramping-vus',
-      startVUs: 0,
-      stages: [
-        { duration: '10s', target: 50 },
-        { duration: '20s', target: 100 },
-      ],
-    },
-  },
-};
-
-export default function () {
-  http.get('https://test.k6.io');
-}
-```
-
-### CI/CD統合（GitHub Actions）
-
-```yaml
-name: k6 Load Test
-
-on: [push]
-
-jobs:
-  k6-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Run k6 test
-        uses: grafana/k6-action@v0.3.0
-        with:
-          filename: script.js
-          flags: --out json=results.json
-
-      - name: Upload results
-        uses: actions/upload-artifact@v3
-        with:
-          name: k6-results
-          path: results.json
-```
-
-### Docker実行
-
-```bash
-docker run -i grafana/k6 run - < script.js
-
-# ファイルマウント
-docker run -i -v $(pwd):/scripts grafana/k6 run /scripts/script.js
-```
-
-## エディション・料金
-
-| エディション | 価格 | 特徴 |
-|-------------|------|------|
-| **k6 OSS** |  無料 | オープンソース、AGPLv3 License |
-| **Grafana Cloud k6** |  $49/月〜 | クラウド実行、分散テスト |
+## 基本的な使い方
+1. 想定トラフィックを試験シナリオに反映します。
+2. テストを実行して遅延・失敗率を確認します。
+3. 閾値超過時は原因を分析し、再試験で改善確認します。
 
 ## メリット
-
-1. **無料**: オープンソース
-2. **開発者フレンドリー**: JavaScript DSL
-3. **CLI**: シンプルCLI
-4. **CI/CD統合**: GitHub Actions、GitLab CI
-5. **メトリクス**: 詳細メトリクス
+| 観点 | 内容 |
+|---|---|
+| 開発親和性 | JavaScript ベースでチーム導入しやすい |
+| 運用性 | CLI で自動化しやすい |
+| 判定明確化 | 閾値による機械的判定が可能 |
 
 ## デメリット
+| 観点 | 内容 |
+|---|---|
+| 設計依存 | シナリオ品質が結果の妥当性を左右する |
+| 環境依存 | 実行基盤差異で結果がぶれやすい |
+| 可視化 | OSS 単体では運用可視化を追加設計する場合がある |
 
-1. **ブラウザ制限**: ヘッドレスブラウザ限定的
-2. **分散実行**: OSS版は単一マシン
-3. **GUI**: GUI非対応
-4. **学習曲線**: JavaScript学習必要
+## 他ツールとの比較
+| ツール | 強み | 使い分け |
+|---|---|---|
+| k6 | 開発フロー統合が容易 | CI 主体の継続性能検証 |
+| JMeter | GUI と情報量が豊富 | 非エンジニア含む運用 |
+| Gatling | 大規模負荷と分析力 | 高負荷中心の検証 |
+| Locust | Python で柔軟な定義 | Python エコシステム重視 |
 
-## 公式リンク
+## ベストプラクティス
+1. 目標指標をテストコードとは別に管理し、変更影響を把握しやすくします。
+2. スモールテストから段階的に負荷を増やし、原因切り分けを容易にします。
+3. 結果は時系列で保存し、劣化トレンドを定点観測します。
 
-- **公式サイト**: [https://k6.io/](https://k6.io/)
-- **ドキュメント**: [https://k6.io/docs/](https://k6.io/docs/)
+## 公式ドキュメント
+- https://grafana.com/docs/k6/latest/
+- https://github.com/grafana/k6
 
-## 関連ドキュメント
-
-- [負荷テストツール一覧](../負荷テストツール/)
-- [JMeter](./JMeter.md)
-- [Gatling](./Gatling.md)
-
----
-
-**カテゴリ**: 負荷テストツール
-**対象工程**: パフォーマンステスト
-**最終更新**: 2025年12月
-**ドキュメントバージョン**: 1.0
-
+## まとめ
+1. k6 は自動化しやすく、開発チーム主導の性能テストに適したツールです。
+2. 実効性を高めるには、閾値管理と結果の継続比較を運用に組み込むことが重要です。
+3. 小規模から始めて段階的に負荷を上げることで、安定した性能改善サイクルを作れます。
